--- a/index.html
+++ b/index.html
@@ -784,6 +784,15 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row justify-content-center">
+                        <div class="col-lg-10">
+                            <!-- Section Title -->
+                            <div class="section-title">
+                                <h5>Ready to revolutionize your event management journey? Join the EventsGo community today
+                                    and discover the ease of planning flawless events.</h5>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
