--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         <div class="row">
                             <div class="col-xl-8 col-lg-8 col-md-9 col-sm-10">
                                 <div class="hero__caption">
-                                    <span data-animation="fadeInLeft" data-delay=".1s">Welcome to office </span>
+                                    <span data-animation="fadeInLeft" data-delay=".1s">Welcome to class </span>
                                     <h1 data-animation="fadeInLeft" data-delay=".5s">EventsGo
                                     </h1>
                                     <!-- Hero-btn -->
